[gd_scene load_steps=2 format=3 uid="uid://d2cvjkbtydqe5"]

[ext_resource type="Script" path="res://user_entry.gd" id="1_vaham"]

[node name="UserEntry" type="Node"]
script = ExtResource("1_vaham")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Instructions" type="RichTextLabel" parent="."]
offset_left = 128.0
offset_top = 57.0
offset_right = 1068.0
offset_bottom = 199.0
bbcode_enabled = true
text = "Please choose a name for yourself. Please don't choose anything excessively profane. Otherwise, anything goes. This name will be how you appear on the leaderboards.  The game will remember your password until you intentionally sign out. If you lose your username or password it can not be recovered, so take care. You can choose to skip this, disabling all leaderboard functionality."

[node name="Username" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -32.0
offset_right = 40.0
offset_bottom = 8.0

[node name="UsernameLabel" type="RichTextLabel" parent="Username"]
layout_mode = 0
offset_left = 294.0
offset_top = 229.0
offset_right = 886.0
offset_bottom = 269.0
theme_override_font_sizes/normal_font_size = 26
text = "Username"

[node name="UsernameField" type="TextEdit" parent="Username"]
layout_mode = 0
offset_left = 294.0
offset_top = 278.0
offset_right = 886.0
offset_bottom = 334.0
placeholder_text = "Choose a display name (alphanumeric  + underscore/hyphen)"

[node name="ErrorText" type="RichTextLabel" parent="Username"]
layout_mode = 0
offset_left = 473.0
offset_top = 239.0
offset_right = 886.0
offset_bottom = 279.0
bbcode_enabled = true

[node name="Password" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -52.0
offset_right = 40.0
offset_bottom = -12.0

[node name="PasswordLabel" type="RichTextLabel" parent="Password"]
layout_mode = 0
offset_left = 294.0
offset_top = 375.0
offset_right = 886.0
offset_bottom = 415.0
theme_override_font_sizes/normal_font_size = 26
text = "Password"

[node name="PasswordField" type="TextEdit" parent="Password"]
layout_mode = 0
offset_left = 294.0
offset_top = 415.0
offset_right = 886.0
offset_bottom = 471.0
placeholder_text = "Choose a password (alphanumeric  + underscore/hyphen)"

[node name="ErrorText" type="RichTextLabel" parent="Password"]
layout_mode = 0
offset_left = 473.0
offset_top = 382.0
offset_right = 886.0
offset_bottom = 422.0
bbcode_enabled = true

[node name="SubmitButton" type="Button" parent="."]
offset_left = 692.0
offset_top = 458.0
offset_right = 885.0
offset_bottom = 516.0
text = "Submit"

[node name="SkipButton" type="Button" parent="."]
offset_left = 473.0
offset_top = 458.0
offset_right = 639.0
offset_bottom = 516.0
text = "Skip"

[node name="HTTPSubmit" type="HTTPRequest" parent="."]

[node name="Foreground" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
